# test_store

./: .env  Dockerfile  README.md  app.sh  data.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2848320187a5_change_names.py  38acabfba6e7_create_tables.py  3cfbe48a6d56_add_weight_parametr_to_products_table.py  51ee7e2c5d34_init_db.py  af6542442e1d_fix_relates.py
crud/: __init__.py
crud/category/: crud.py  schemas.py  views.py
crud/product/: crud.py  schemas.py  views.py
crud/sorting/: crud.py  views.py
db/: config.py
db/models/: __init__.py  categories.py  db_helper.py  products.py
