[tool.poetry]
name = "test-store-api"
version = "0.1.0"
description = "Api for test task"
authors = ["pavlentiod"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["all"], version = "^2.0.27"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
pathlib = "^1.0.1"
logging = "^0.4.9.6"
pydantic-settings = "^2.3.3"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
